--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -24,7 +24,7 @@
 @import 'ritual/header'
 @import 'ritual/block_info'
 @import 'ritual/index'
-@import 'muse/content'
+@import 'ritual/funeral-services'
 @import 'muse/basement'
 @import 'muse/footer'
 /************************/
