--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -50,6 +50,7 @@ h1
 	color: #fff
 h2
 	font-size: 2.369em
+	color: #fff
 h3
 	font-size: 1.777em
 p
@@ -58,7 +59,6 @@ p
 	font-size: 1.3em
 .h2
 	font-size: 1.1em
-	font-family: $PR
 	font-weight: 300
 .h3
 	position: relative
