--- a/src/sass/_mixin.sass
+++ b/src/sass/_mixin.sass
@@ -881,6 +881,20 @@ input
 				@include anim_width
 .no-margin
 	margin: 0 -.75rem
+
+.link_buton-anima
+	position: absolute
+	z-index: 99
+	background: #000
+	.fix-lable
+		width: 10rem
+		position: absolute
+		top: -1rem
+		min-height: 2rem
+		@extend .f-str
+
+
+
 .path
 	@include triangle("left", 30rem, 25rem, #e0e0e0)
 	position: absolute !important
