--- a/src/sass/ritual/_funeral-services.sass
+++ b/src/sass/ritual/_funeral-services.sass
@@ -3,6 +3,7 @@
   .container
     padding: 2rem 0
     overflow: visible
+    position: relative
   .h1
     padding: 1rem .75rem
   &.pictures_block
