--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,7 +25,7 @@
 @import 'ritual/block_info'
 @import 'ritual/index'
 @import 'ritual/funeral-services'
-@import 'muse/basement'
+@import 'ritual/catalog'
 @import 'muse/footer'
 /************************/
 //|********PAGE***********|\\
